retail-media/v2024.10/docs/metrics-and-dimensions-ssp.mdx
---
title: "Metrics and Dimensions (SSP)"
---

1. Guides for Retail Media API
2. [Supply Side Analytics (SSP)](/retail-media/v2024.10/docs/supply-side-reporting-ssp)

In this page you will find all the metrics and dimensions that are currently support with the [Revenue Report](/retail-media/docs/revenue-report-ssp). Please note that many of the metrics and dimensions listed here are currently supported only through the API.

### Dimensions

| Dimensions                                                                                                      | Description                                                                                                                                                                                                                                                                                                                                                                 |
| --------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `date`                                                                                                          | The date of when reported activity took place occurred                                                                                                                                                                                                                                                                                                                      |
| `hour`                                                                                                          | The hour of the day when rendered ad received an event                                                                                                                                                                                                                                                                                                                      |
| `parentAccount`                                                                                                 | The associated account that is connected to the supply or demand account                                                                                                                                                                                                                                                                                                    |
| `accountId`                                                                                                     | The computed and unique identifier of the supply or demand account                                                                                                                                                                                                                                                                                                          |
| `accountName`                                                                                                   | The supply or demand account name                                                                                                                                                                                                                                                                                                                                           |
| `accountTypeName`                                                                                               | The account type of the reported activity. Options will include:<ul><li>"*Demand*" for revenue generated from an indirect sold or private market demand account.</li><li>"*Supply*" - revenue was generated from direct sold campaigns</li></ul>                                                                                                                         |
| `advertiserType`                                                                                                | The advertiser account type where the ad activity originated from. Options includes:<ul><li>***retailer*** - ad activity sold directly in the supply account</li><li>***brand*** ad activity sold to a demand brand account in the Criteo network or through private market</li><li>***seller*** ad activity sold to a demand seller account in the Criteo network or through private market</li></ul>  |
| `campaignId`                                                                                                    | The computed unique campaign identifier of the demand or supply account that generated the activity                                                                                                                                                                                                                                                                         |
| `campaignName`                                                                                                  | The campaign name of the demand or supply account that generated the activity                                                                                                                                                                                                                                                                                               |
| `campaignTypeName`                                                                                              | The campaign type available. Available options are "Open Auction" or Preferred Deals"                                                                                                                                                                                                                                                                                       |
| `campaignStartDate`                                                                                             | The start date set for the campaign                                                                                                                                                                                                                                                                                                                                         |
| `campaignEndDate`                                                                                               | The end date set for campaign                                                                                                                                                                                                                                                                                                                                               |
| `lineItemId`                                                                                                    | The computed unique identifier of a line-item                                                                                                                                                                                                                                                                                                                               |
| `lineItemName`                                                                                                  | The line-item name provided by the advertiser                                                                                                                                                                                                                                                                                                                               |
| `lineItemStartDate`                                                                                             | The start date set for the line-item                                                                                                                                                                                                                                                                                                                                        |
| `lineItemEndDate`                                                                                               | The end date set for the line-item                                                                                                                                                                                                                                                                                                                                          |
| `lineItemStatus`                                                                                                | The status of the line-item associated with the selected dimension, such as the date or hour indicating of when the event took place. Check out the [Statuses](/retail-media/v2024.10/docs/status) page for more details on available values and their behaviors.                                                                                                                                   |
| `retailerId`                                                                                                    | The retailer ID that is associated with the report activities . This will be the same `id` provided in the API call                                                                                                                                                                                                                                                         |
| `retailerName`                                                                                                  | The retailer name that is associated to the report activity.                                                                                                                                                                                                                                                                                                                |
| `brandId`                                                                                                       | The brand ID provided by the retailer brand ID associated with the advertised SKU                                                                                                                                                                                                                                                                                           |
| `brandName`                                                                                                     | The retailer brand name associated with the advertised SKU                                                                                                                                                                                                                                                                                                                  |
| `placementId`                                                                                                   | The id of the placement where the ad creative was displayed.                                                                                                                                                                                                                                                                                                                |
| `placementName`                                                                                                 | The name of the placement where the ad creative was displayed.                                                                                                                                                                                                                                                                                                              |
| `pageTypeName`                                                                                                  | The page type where the ad was rendered                                                                                                                                                                                                                                                                                                                                     |
| `environment`                                                                                                   | The environment where the ad was rendered on. Options will include web, mobile and app                                                                                                                                                                                                                                                                                      |
| `soldBy`                                                                                                        | The source of where activities originated from. Options will include "Direct Sold", "Indirect Sold" or "Private Market"                                                                                                                                                                                                                                                     |
| `buyType`                                                                                                       | The campaign buying strategy. Options will include `auction`, `preferredDeals`, or `sponsorship`                                                                                                                                                                                                                                                                            |
| `salesChannel`                                                                                                  | Sales channel the attributed purchase was made through.Available options are:<ul><li>\*online\*\* for sales attributed to an ad that was served and purchased online or in-app</li><li>\*offline\*\* for sales to an ad that was served online but purchase in store.</li></ul>                                                                                                                   |
| `attributionSettings`                                                                                           | The lookback click and view attribution window of the requested report. The attribution window is based on the parameters selected in the report API request. The `attributedSettings`field will be based on the lookback windows provided in the API call.**Post-Click (C) lookback window** none, 7, 14, 30 days**Post-view (V) lookback window** none, 1, 7, 14, 30 days |
| `activityType`                                                                                                  | The type of ad engagement the sale was attributed to. Available options will include `imp` for impressions or `click` for clicks                                                                                                                                                                                                                                            |
| `keyword`                                                                                                       | Normalized Keyword or phrase used to land on the search page where an ad creative rendered.                                                                                                                                                                                                                                                                                 |
| `skuRelation`                                                                                                   | Attribution rule used to match the impression or click to a sale. Available options are: `Same SKU`, `Same Parent SKU`, `Same Category`, `Same Brand` or `Same Seller`                                                                                                                                                                                                      |
| `advProductId`                                                                                                  | Advertised product ID; this references the same product ID of the retailer Catalogs                                                                                                                                                                                                                                                                                         |
| `advProductName`                                                                                                | Advertised product name                                                                                                                                                                                                                                                                                                                                                     |
| `advProductGtin`                                                                                                | Advertised product GTIN                                                                                                                                                                                                                                                                                                                                                     |
| `advProductMpn`                                                                                                 | Advertised product MPN                                                                                                                                                                                                                                                                                                                                                      |
| `pageCategory`                                                                                                  | The retailer defined category of the page where ads are rendered                                                                                                                                                                                                                                                                                                            |
| `retailerCategoryId`                                                                                            | The retailer category provides the type of product the SKU belongs to. This fields provides the id of that product type                                                                                                                                                                                                                                                     |
| `retailerCategoryName`                                                                                          | The name of that product type                                                                                                                                                                                                                                                                                                                                               |
| `taxonomyBreadcrumb`                                                                                            | The category breadcrumb of the product using retailer product taxonomies (L1, L2 L3 etc.). This is for analysis where SKUs are present in the displays                                                                                                                                                                                                                      |
| `taxonomy1Id ``taxonomy2Id` `taxonomy3Id` `taxonomy4Id` `taxonomy5Id` `taxonomy6Id` `taxonomy7Id`               | The ID SKU's taxonomy. The revenue report provides the option to select level 1 through level 7.ℹ️ **Note**: SKUs will normally have at least the primary sku taxonomy (L1). All following levels are considered additional taxonomies. If a SKU does not have an additional taxonomy level, the report will default to "unknown."                                          |
| `taxonomy1Name` `taxonomy2Name` `taxonomy3Name` `taxonomy4Name` `taxonomy5Name` `taxonomy6Name` `taxonomy7Name` | The name SKU's taxonomy. If a SKU does not have an additional taxonomy level, the report will default to "unknown."                                                                                                                                                                                                                                                         |

### Metrics

| Dimensions              | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| ----------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `numberOfCampaigns`     | the total count of campaigns associated with the selected report dimension.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| `numberOfLineItems`     | The total count of line-items associated with the selected report dimension.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| `numberOfSkus`          | The total count of skus associated with the selected report dimension.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| `skuUnitPrice`          | The total price of each SKU unit.<ul><li>\*Note\*\*: It is recommended to utilize metrics such as `advProductId`, `advProductGtin`, and `advProductMpn` to access individual SKU prices. However, when considering other dimensions at the line-item, campaign, or account level, the sum of all SKU prices will be calculated.</li></ul>                                                                                                                                                                                                                                                                                                                |
| `pageViews`             | The count of unique ad calls on a retailer network. Use this metric when referencing to dimensions that relates to itself to receive a more comprehensive data. Using dimensions such as `pageTypeName`, `placementId`or `placementName`will provide you data to understand the performance of this metric.                                                                                                                                                                                                                                                                                                                                                    |
| `impressions`           | An impression represents each time an ad renders on a page, regardless of clicks or views.An impression for a Sponsored Product ad is when the sponsored SKU renders on the page (the product being the ad).An impression for a Commerce Display ad is when the entire banner (creative + product) renders on the page.An impression for a Display banner ad is when the creative banner renders on the page.                                                                                                                                                                                                                                                  |
| `productClicks`         | Total count of the click events that occur when a user clicks a product in a placement                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| `placementClicks`       | Total count of the click events that occur when a user clicks a placement                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `clicks`                | The total count of all click events<ul><li>\*Formula\*\*: `placementClicks` + `productClicks`</li></ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| `sales`                 | The total attributed revenue from product sales                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| `units`                 | The total attributed product units sold                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| `assitedSales`          | Sales revenue attributed to a click or impression of all the ads that appeared on a page within the chosen attribution window (specified at the campaign level) but were not determined to be the `attributedSales `(the last ad before the customer purchased).                                                                                                                                                                                                                                                                                                                                                                                               |
| `assistedUnits`         | The number of events that occurred that helped generated a sale. Assisted units are excluded from `attributedUnits`. This means its not counted in the attributed units calculation                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| `openAuctionRevenue`    | The total amount of **open auction revenue** generated on the set date                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| `preferredDealsRevenue` | The total amount of **preferred deals revenue** generated on the set date                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `revenue`               | The total revenue generated on the set date. The `revenue` metric take the total revenue generated across preferred deals or auction campaigns for that period and is computed the same way as the `openAuctionRevenue` and `preferredDealsRevenue`.                                                                                                                                                                                                                                                                                                                                                                                                           |
| `transactions`          | The total total attributed orders/transactions                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| `ctr`                   | The percentage of shoppers who clicked an ad rendered on a page.Product and Product Category Report Types<ul><li>\*Formula\*\*: `clicks` / `productImpressions`</li></ul>All other report types<ul><li>\*Formula\*\*: `clicks` / `placementImpressions`</li><li>\*Note\*\*: there are two types of impressions that can be measured to know the success of your ads: `placementImpressions` and `productImpressions`. Preferred deals have placement impressions, while open auction uses product impressions. For more info: [Product & Placement Impression](https://help.retailmedia.criteo.com/kb/guide/en/product-placement-impressions-Yg9vyLMSMS/Steps/2492962) Help Center article</li></ul> |
| `cr`                    | The number of conversion generated by the visitors to the retailer site.<ul><li>\*Formula\*\*: number of conversions / `clicks` \* 100</li></ul>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| `cpc`                   | Average cost-per-click calculated by dividing openAuctionRevenue / clicks or preferredDealsRevenue / clicks                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| `cpm`                   | Average cost per mille calculated by diving `preferredDealsRevenue` / `impressions` \* 1000                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| `roas`                  | Return-on-ad-spend (ROAS), calculated by dividing `sales` / `openAuctionRevenue` or `sales` / `preferredDealsRevenue`                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| `workingMedia`          | The total spend paid by the brand                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| `netRevenue`            | The total revenue from brand spend for the retailer                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| `uniqueVisitors`        | The number of distinct shoppers exposed to an ad within the reporting period. Each shopper is counted once using the retailer cookie ID.Criteo uses retailer cookie IDs to identify users across sessions on the same device. Each ID can last up to a year, provided the user does not clear their cookies.                                                                                                                                                                                                                                                                                                                                                   |
| `frequency`             | An average representing how often an impression has been shown to the same user                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
